--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,8 @@
 [tox]
-envlist = py{35,36,37}-requests{218,219,220,221,latest}
+envlist = py{36,37,38}-requests{218,219,220,221,latest}
 
 [testenv]
-commands = {posargs:pytest}
+commands = pytest {posargs}
 deps=
     pytest
     requests_mock
