Added Session persistent kwargs to RestApi. (#1)
Added Session persistent kwargs to RestApi.

- Additional kwargs passed to RestApi will be persistently
applied to each request that the client makes unless explicitly
overwritten by the specific api call.
- Modified `__repr__` to include any persistent arguments passed
to RestApi during construction.
- Added necessary unit-tests.
- Small bug fixes.
- Fixed type and linter errors.

Co-authored-by: nickroeker <22895294+nickroeker@users.noreply.github.com>

--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ envlist = py{36,37,38}-requests{218,219,220,221,latest}
 commands = pytest {posargs}
 deps=
     pytest
+    pytest_mock
     requests_mock
     responses
     requests218: requests~=2.18.0
